fixed opacity + line break in msgs

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -155,17 +155,16 @@ body{
     background-image: url(images/background.jpg);
     background-size: 100%, 100%;
     box-sizing: border-box;
-    /*  widht & height  */
     height: 87%;
     left: 25%;
     width: 71%;
 
     /*  positioning:  */
-    position: absolute;
+    position: fixed;
     top: 10%;
 
     /*  padding  */
-    /*padding-right: 5px;
+    padding-right: 5px;
     padding-left: 20px;
 
     /*  margin  */
@@ -180,7 +179,7 @@ body{
 
 }
 
-.messagebody{
+.messageid{
     position: absolute;
     right: 5px;
     top: 5px;
@@ -188,6 +187,8 @@ body{
     color: white;
     width: auto%;
     padding: 5px;
+    padding-bottom: 50px;
+    height:90%;
 }
 
 
